--- a/index.html
+++ b/index.html
@@ -33,8 +33,13 @@
       <li class="navigation-item">
         <a href="" class="header-link link im-here" >Контакты</a>
       </li>
-    </ul>
+    </ul> 
   </nav>
+  <button type="button" class="menu-btn">
+    <svg class="menu">
+      <use href="./images.img/sprite-copy.svg#icon-menu"></use>
+    </svg>
+  </button>
 
   <ul class="list-all list in-touch">
     <li class="navigation-item">
@@ -52,9 +57,10 @@
         +380961111111</a>
     </li>
   </ul>
+ 
    </div>
 </header>
-
+<!--
 <main>
   <!--Hero-->
   <section class="hero-bg">
@@ -64,6 +70,7 @@
       </div>
   </section>
 
+  <!--
   <section class="advantage">
     <!--Advantages section-->
     <div class="container">
@@ -122,8 +129,8 @@
     </ul>
       </div>
   </section>
-
-    
+-->
+    <!--
     <section class="cont">
       <!--About-->
       <div class="container">
@@ -151,7 +158,9 @@
       </ul>
      </div>
     </section>
+-->
 
+  <!--
     <!--Our team-->
     <section class="our-team-bg">
       <div class="container">
@@ -339,7 +348,9 @@
       </div>
     </section>
   </main>
+-->
 
+<!--
   <footer class="footer-bg">
     <!--footer main page-->
     <div class="container main-footer">
@@ -418,7 +429,9 @@
     </div>
   </div>
   </footer>
+-->
 
+<!--
   <!--Modal window-->
 
   <div class="modal__bg is-hidden" data-modal>
@@ -469,7 +482,7 @@
   </div>
 </div>
 
-<script src="./js/modal.js"></script>
+<script src="./js/modal.js"></script>-->
 </body>
 
 </html>
