--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
 
 <body>
   <header class="header">
+    
     <div class="container">
+      <a  href="./index.html" class="link logo logo-light-theme">
+      <span class="link logo">Web</span>Studio </a>
   <nav class="navigation">
-    <a  href="./index.html" class="link logo logo-light-theme">
-      <span class="link logo">Web</span>Studio
-    </a>
+    
     <ul class="list-all list">
       <li class="navigation-item">
         <a href="./index.html" class="current header-link link im-here" >Студия</a>
@@ -35,12 +36,7 @@
       </li>
     </ul> 
   </nav>
-  <button type="button" class="menu-btn">
-    <svg class="menu">
-      <use href="./images.img/sprite-copy.svg#icon-menu"></use>
-    </svg>
-  </button>
-
+  
   <ul class="list-all list in-touch">
     <li class="navigation-item">
       <a class="header-link contact-link link" href="mailto:info@devstudio.com" lang="en"> 
@@ -57,7 +53,11 @@
         +380961111111</a>
     </li>
   </ul>
- 
+  <button type="button" class="menu-btn">
+    <svg class="menu">
+      <use href="./images.img/sprite-copy.svg#icon-menu"></use>
+    </svg>
+  </button>
    </div>
 </header>
 <!--
