revrite header-burger

--- a/index.html
+++ b/index.html
@@ -18,23 +18,11 @@
 
 <body>
   <header class="header">
-    
     <div class="container">
       <a  href="./index.html" class="link logo logo-light-theme">
-      <span class="link logo">Web</span>Studio </a>
+        <span class="link logo">Web</span>Studio </a>
+
   <nav class="navigation">
-<<<<<<< HEAD
-    
-=======
-    <a  href="./index.html" class="link logo logo-light-theme">
-      <span class="link logo">Web</span>Studio
-    </a>
-    <button type="button" class="menu-btn">
-      <svg class="menu">
-        <use href="./images.img/sprite-copy.svg#icon-menu"></use>
-      </svg>
-    </button>
->>>>>>> main
     <ul class="list-all list">
       <li class="navigation-item">
         <a href="./index.html" class="current header-link link im-here" >Студия</a>
@@ -45,13 +33,9 @@
       <li class="navigation-item">
         <a href="" class="header-link link im-here" >Контакты</a>
       </li>
-    </ul> 
+    </ul>
   </nav>
-  
-<<<<<<< HEAD
-=======
 
->>>>>>> main
   <ul class="list-all list in-touch">
     <li class="navigation-item">
       <a class="header-link contact-link link" href="mailto:info@devstudio.com" lang="en"> 
@@ -69,13 +53,13 @@
     </li>
   </ul>
   <button type="button" class="menu-btn">
-    <svg class="menu">
+    <svg class="menu" width="40px" height="40px">
       <use href="./images.img/sprite-copy.svg#icon-menu"></use>
     </svg>
   </button>
    </div>
 </header>
-<!--
+
 <main>
   <!--Hero-->
   <section class="hero-bg">
@@ -84,10 +68,10 @@
     <button type="button" class="main-button" data-modal-open>Заказать услугу</button>
       </div>
   </section>
-
-  <!--
+  <!--Advantages section-->
+  
   <section class="advantage">
-    <!--Advantages section-->
+  
     <div class="container">
 
     <h2 class="visually-hidden">Преимущества</h2>
@@ -144,8 +128,7 @@
     </ul>
       </div>
   </section>
--->
-    <!--
+ 
     <section class="cont">
       <!--About-->
       <div class="container">
@@ -173,9 +156,7 @@
       </ul>
      </div>
     </section>
--->
-
-  <!--
+ 
     <!--Our team-->
     <section class="our-team-bg">
       <div class="container">
@@ -363,9 +344,7 @@
       </div>
     </section>
   </main>
--->
 
-<!--
   <footer class="footer-bg">
     <!--footer main page-->
     <div class="container main-footer">
@@ -444,9 +423,7 @@
     </div>
   </div>
   </footer>
--->
 
-<!--
   <!--Modal window-->
 
   <div class="modal__bg is-hidden" data-modal>
@@ -497,7 +474,8 @@
   </div>
 </div>
 
-<script src="./js/modal.js"></script>-->
+<script src="./js/modal.js"></script>
+
 </body>
 
 </html>
