--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <span class="link logo">Web</span>Studio </a>
 
   <nav class="navigation">
-    <ul class="list-all list">
+    <ul class="list-all list navigation-list">
       <li class="navigation-item">
         <a href="./index.html" class="current header-link link im-here" >Студия</a>
       </li>
@@ -76,12 +76,13 @@
          <a href="" class="mobile-menu__link link">Контакты</a>
         </li>
      </ul>
+     <div class="mobile-menu__contacts">
      <ul class="mobile-menu_list-contacts">
-       <li class="mobile-menu__item-contacts list-all">
-         <a href="" class="mobile-menu__link-contacts link">+38 096 111 11 11</a>
+       <li class="mobile-menu__item-contacts-phone list-all">
+         <a href="" class="mobile-menu__link-contacts-phone link">+38 096 111 11 11</a>
         </li>
        <li class="mobile-menu__item-contacts list-all">
-         <a href="" class="mobile-menu__link-contacts link">info@devstudio.com</a>
+         <a href="" class="mobile-menu__link-contacts-mail link">info@devstudio.com</a>
         </li>
      </ul>
      <ul class="mobile-menu__social-list">
@@ -98,6 +99,7 @@
          <a href="" class="mobile-menu__social-link link">LinkedIn</a>
       </li>
      </ul>
+    </div>
    </div>
 </header>
 
