--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   </button>
    </div>
    
-   <div class="mobile-menu" data-menu>
+   <div class="mobile-menu is-open" data-menu>
      <button type="button" class="mobile-menu__close-btn" data-menu-close>
        <svg class="mobile-menu__close-icon" width="40px" height="40px">
          <use href="./images.img/sprite-copy.svg#icon-close"></use>
