team/clients/about

--- a/index.html
+++ b/index.html
@@ -206,7 +206,12 @@
       <h2 class="body-title">Наша команда</h2>
       <ul class="team-container list-all list">
         <li class="team-container__set card">
-          <img src="./images.img/ihor.jpg" alt="Мужчина в очках и бордовой рубашке" width="270" height="260" class="ihor"/>
+          <picture class="picture">
+            <source src="./images/ihor-mobile@1x.jpg 1x, images/ihor-mobile@2x.jpg 2x" media="(min-width:320px)">
+            <source src="./images/ihor-tablet@1x.lpg 1x, images/ihor-tablet@2x.jpg 2x" media="(min-width:768px)">
+            <source src="./images/ihor-desctop@1x.jpg 3x, images/ihor-desctop@1x.jpg 1x" media="(min-width:1200px)">
+            <img src="./images.img/ihor.jpg" alt="Мужчина в очках и бордовой рубашке" width="270" height="260" class="ihor"/>
+          </picture>
          <div class="team-description"><h3 class="team-mate">Игорь Демьяненко</h3>
           <p lang="en" class="job-position">Product Designer</p>
         <ul class="list-all list social">
@@ -238,7 +243,12 @@
         </div>
       </li>
         <li class="team-container__set card">
-          <img src="./images.img/olha.jpg" alt="Девушка,блондинка в очках и черном пиджаке" width="270" height="260" class="olha"/>
+          <picture class="picture">
+            <source src="./images/olha-mobile@1x.jpg 1x, images/olha-mobile@2x.jpg 2x" media="(min-width:320px)">
+            <source src="./images/olha-tablet@1x.lpg 1x, images/olha-tablet@2x.jpg 2x" media="(min-width:768px)">
+            <source src="./images/olha-desctop@1x.jpg 3x, images/olha-desctop@1x.jpg 1x" media="(min-width:1200px)">
+            <img src="./images.img/olha.jpg" alt="Девушка,блондинка в очках и черном пиджаке" width="270" height="260" class="olha"/>
+          </picture>
         <div class="team-description">  <h3 class="team-mate">Ольга Репина</h3>
           <p lang="en" class="job-position">Frontend Developer</p>
           <ul class="list-all list social">
@@ -269,8 +279,12 @@
           </ul>
         </div>
       </li>
-        <li class="team-container__set card">
+        <li class="team-container__set card"><picture class="picture">
+          <source src="./images/nikolaj-mobile@1x.jpg 1x, images/nikolaj-mobile@2x.jpg 2x" media="(min-width:320px)">
+          <source src="./images/nikolaj-tablet@1x.lpg 1x, images/nikolaj-tablet@2x.jpg 2x" media="(min-width:768px)">
+          <source src="./images/nikolaj-desctop@1x.jpg 3x, images/nikolaj-desctop@1x.jpg 1x" media="(min-width:1200px)">
           <img src="./images.img/nikolaj.jpg" alt="Парень в голубой рубашке" width="270" height="260" class="nikolaj"/>
+        </picture>
          <div class="team-description"><h3 class="team-mate">Николай Тарасов</h3>
           <p lang="en" class="job-position">Marketing</p>
           <ul class="list-all list social">
@@ -302,8 +316,13 @@
         </div>
       </li>
         <li class="team-container__set card">
-          <img src="./images.img/michele.jpg" alt="Парень в очках,с бородой и в черной футболке" width="270"
+          <picture class="picture">
+            <source src="./images/michele-mobile@1x.jpg 1x, images/michele-mobile@2x.jpg 2x" media="(min-width:320px)">
+            <source src="./images/michele-tablet@1x.lpg 1x, images/michele-tablet@2x.jpg 2x" media="(min-width:768px)">
+            <source src="./images/michele-desctop@1x.jpg 3x, images/michele-desctop@1x.jpg 1x" media="(min-width:1200px)">
+            <img src="./images.img/michele.jpg" alt="Парень в очках,с бородой и в черной футболке" width="270"
             height="260" class="michele"/>
+          </picture>
          <div class="team-description"><h3 class="team-mate">Михаил Ермаков</h3>
           <p lang="en" class="job-position">UI Designer</p>
           <ul class="list-all list social">
@@ -376,7 +395,7 @@
                 </svg>
               </a>
             </li>
-            <li class="clients-box">
+            <li class="clients-box clients-main-link">
               <a href="" class="clients-link">
                 <svg class="clients-logo" width="44.27px" height="49.23px">
                   <use href="./images.img/sprite-copy.svg#icon-logo-6"></use>
