--- a/index.html
+++ b/index.html
@@ -410,7 +410,8 @@
   <footer class="footer-bg">
     <!--footer main page-->
     <div class="container main-footer">
-    <div>
+    <div class="footer-tablet">
+    <div class="footer-tablet__address">
     <a class="link  logo logo-dark-theme" href="./index.html">
             <span class="link logo">Web</span>Studio
     </a>
@@ -432,7 +433,8 @@
         </li>
       </ul>
     </address>
-    </div>
+  </div>
+    
     <div class="invitation-footer">
       <p class="invitation">ПРИСОЕДИНЯЙТЕСЬ</p>
       <ul class="list-all list footer-set">
@@ -466,6 +468,7 @@
         </li>
       </ul>
     </div>
+  </div>
     <div class="follow">
       <form action="#">
       <p class="follow__reminder">ПОДПИШИТЕСЬ НА РАССЫЛКУ</p>
