--- a/portfolio.html
+++ b/portfolio.html
@@ -17,49 +17,97 @@
 <body>
     <!--Header-->
     <header class="header">
-        <div class="container">
-      <nav class="navigation">
+      <div class="container">
         <a  href="./index.html" class="link logo logo-light-theme">
-          <span class="link logo">Web</span>Studio
-        </a>
-        <ul class="list-all list">
-          <li class="navigation-item">
-            <a class="header-link link im-here" href="./index.html">Студия</a>
-          </li>
-          <li class="navigation-item">
-            <a class="current header-link link im-here" href="./portfolio.html">Портфолио</a>
-          </li>
-          <li class="navigation-item">
-            <a class="header-link link im-here" href="">Контакты</a>
-          </li>
-        </ul>
-      </nav>
-    
-      <ul class="list-all list in-touch">
+          <span class="link logo">Web</span>Studio </a>
+  
+    <nav class="navigation">
+      <ul class="list-all list navigation-list">
         <li class="navigation-item">
-          <a class="header-link contact-link link" href="mailto:info@devstudio.com" lang="en"> 
-            <svg class="icon-envelope" width="16px" height="16px">
-              <use href="./images.img/sprite-copy.svg#icon-envelope-hover"> </use>
-            </svg>
-            info@devstudio.com</a>
+          <a href="./index.html" class="current header-link link im-here" >Студия</a>
         </li>
         <li class="navigation-item">
-          <a class="header-link contact-link link" href="tel:+380961111111">
-            <svg class="icon-smartphone" width="10px" height="16px">
-              <use href="./images.img/sprite-copy.svg#icon-smartphone"></use>
-            </svg>
-            +380961111111</a>
+          <a href="./portfolio.html" class="header-link link im-here" >Портфолио</a>
+        </li>
+        <li class="navigation-item">
+          <a href="" class="header-link link im-here" >Контакты</a>
         </li>
       </ul>
-       </div>
-    </header>
+    </nav>
+  
+    <ul class="list-all list in-touch">
+      <li class="navigation-item">
+        <a class="header-link contact-link link" href="mailto:info@devstudio.com" lang="en"> 
+          <svg class="icon-envelope" width="16px" height="16px">
+            <use href="./images.img/sprite-copy.svg#icon-envelope-hover"> </use>
+          </svg>
+          info@devstudio.com</a>
+      </li>
+      <li class="navigation-item">
+        <a class="header-link contact-link link" href="tel:+380961111111">
+          <svg class="icon-smartphone" width="10px" height="16px">
+            <use href="./images.img/sprite-copy.svg#icon-smartphone"></use>
+          </svg>
+          +380961111111</a>
+      </li>
+    </ul>
+    <button type="button" class="menu-btn" data-menu-button>
+      <svg class="menu" width="40px" height="40px">
+        <use href="./images.img/sprite-copy.svg#icon-menu"></use>
+      </svg>
+    </button>
+     </div>
+     
+     <div class="mobile-menu is-open" data-menu>
+       <button type="button" class="mobile-menu__close-btn" data-menu-close>
+         <svg class="mobile-menu__close-icon" width="40px" height="40px">
+           <use href="./images.img/sprite-copy.svg#icon-close"></use>
+         </svg>
+       </button>
+       <ul class="mobile-menu__list">
+         <li class="mobile-menu__item list-all">
+           <a href="./index.html" class="mobile-menu__link link">Студия</a>
+          </li>
+         <li class="mobile-menu__item list-all">
+           <a href="./portfolio.html" class="mobile-menu__link link">Портфолио</a>
+          </li>
+         <li class="mobile-menu__item list-all">
+           <a href="" class="mobile-menu__link link">Контакты</a>
+          </li>
+       </ul>
+       <div class="mobile-menu__contacts">
+       <ul class="mobile-menu_list-contacts">
+         <li class="mobile-menu__item-contacts-phone list-all">
+           <a href="" class="mobile-menu__link-contacts-phone link">+38 096 111 11 11</a>
+          </li>
+         <li class="mobile-menu__item-contacts list-all">
+           <a href="" class="mobile-menu__link-contacts-mail link">info@devstudio.com</a>
+          </li>
+       </ul>
+       <ul class="mobile-menu__social-list">
+         <li class="mobile-menu__social-item list-all">
+           <a href="" class="mobile-menu__social-link link">Instagram</a>
+        </li>
+         <li class="mobile-menu__social-item list-all">
+           <a href="" class="mobile-menu__social-link link">Twitter</a>
+        </li>
+         <li class="mobile-menu__social-item list-all">
+           <a href="" class="mobile-menu__social-link link">Facebook</a>
+        </li>
+         <li class="mobile-menu__social-item list-all">
+           <a href="" class="mobile-menu__social-link link">LinkedIn</a>
+        </li>
+       </ul>
+      </div>
+     </div>
+  </header>
     <!--End header-->
 
     <main>
         <!--Work gallery-->
         <section> 
         <div class="container">
-            <ul class="list-all list main-set">
+            <ul class="main-set list-all list">
                 <li class="main-set__items">
                     <button type="button" class="portfolio-btn">Все</button>
                 </li>
@@ -307,5 +355,9 @@
   </div>
       </footer>
       <!--End footer-->
+
+      <script src="./js/modal.js"></script>
+
+      <script src="./js/mobile-menu.js"></script>
 </body>
 </html>
