--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
     </button>
      </div>
      
-     <div class="mobile-menu is-open" data-menu>
+     <div class="mobile-menu" data-menu>
        <button type="button" class="mobile-menu__close-btn" data-menu-close>
          <svg class="mobile-menu__close-icon" width="40px" height="40px">
            <use href="./images.img/sprite-copy.svg#icon-close"></use>
@@ -120,7 +120,7 @@
                 <li class="main-set__items">
                     <button type="button" class="portfolio-btn">Дизайн</button>
                 </li>
-                <li>
+                <li class="main-set__items">
                     <button type="button" class="portfolio-btn">Маркетинг</button>
                 </li>
             </ul>
@@ -128,7 +128,12 @@
             <ul class="list-all list works-set">
                 <li class="buttom-bg works-set__item">
                   <div class="overlay-wrapper">
-                    <img src="./images.img/work1.jpg" alt="Ноутбук с изображением сайта на екране" width="370" height="294" class="work1">
+                    <pictuture>
+                      <source src="./images.img/work1-mobile@1x.jpg 1x, ./images.img/work1-mobile@2x.jpg 2x" media="(min-width: 320px)">
+                      <source src="./images.img/work1-tablet@1x.jpg 1x, ./images.img/work1-tablet@2x.jpg 2x" media="(min-width: 769px)">
+                      <source src="./images.img/work1-desctop@1x.jpg 1x, ./images.img/work1-desctop@2x.jpg 2x" media="(min-width: 1200px)">
+                      <img src="./images.img/work1.jpg" alt="Ноутбук с изображением сайта на екране" width="370" height="294" class="work1">
+                    </pictuture>
                     <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                     </div>
                   <div class="work-content">
@@ -138,7 +143,12 @@
                 </li>
                 <li class="buttom-bg works-set__item">
                   <div class="overlay-wrapper">
-                    <img src="./images.img/work2.jpg" alt="Баскетболисты борятся за мяч" width="370" height="294" class="work2">
+                    <picture>
+                      <source src="./images.img/work1-mobile@1x.jpg 1x, ./images.img/work1-mobile@2x.jpg 2x" media="(min-width: 320px)">
+                      <source src="./images.img/work1-tablet@1x.jpg 1x, ./images.img/work1-tablet@2x.jpg 2x" media="(min-width: 769px)">
+                      <source src="./images.img/work1-desctop@1x.jpg 1x, ./images.img/work1-desctop@2x.jpg 2x" media="(min-width: 1200px)">
+                      <img src="./images.img/work2.jpg" alt="Баскетболисты борятся за мяч" width="370" height="294" class="work2">
+                    </picture>
                     <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                     </div>
                     <div class="work-content">
@@ -148,7 +158,12 @@
                 </li>
                 <li class="buttom-bg works-set__item">
                   <div class="overlay-wrapper">
-                    <img src="./images.img/work3.jpg" alt="Эмблема названия ресторана" class="work3">
+                    <picture>
+                      <source src="./images.img/work1-mobile@1x.jpg 1x, ./images.img/work1-mobile@2x.jpg 2x" media="(min-width: 320px)">
+                      <source src="./images.img/work1-tablet@1x.jpg 1x, ./images.img/work1-tablet@2x.jpg 2x" media="(min-width: 769px)">
+                      <source src="./images.img/work1-desctop@1x.jpg 1x, ./images.img/work1-desctop@2x.jpg 2x" media="(min-width: 1200px)">
+                      <img src="./images.img/work3.jpg" alt="Эмблема названия ресторана" class="work3">
+                    </picture>
                     <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                     </div>
                     <div class="work-content">
@@ -158,7 +173,12 @@
                 </li>
                 <li class="buttom-bg works-set__item">
                   <div class="overlay-wrapper">
-                    <img src="./images.img/work4.jpg" alt="Изображение наушников" class="work4">
+                    <picture>
+                      <source src="./images.img/work1-mobile@1x.jpg 1x, ./images.img/work1-mobile@2x.jpg 2x" media="(min-width: 320px)">
+                      <source src="./images.img/work1-tablet@1x.jpg 1x, ./images.img/work1-tablet@2x.jpg 2x" media="(min-width: 769px)">
+                      <source src="./images.img/work1-desctop@1x.jpg 1x, ./images.img/work1-desctop@2x.jpg 2x" media="(min-width: 1200px)">
+                      <img src="./images.img/work4.jpg" alt="Изображение наушников" class="work4">
+                    </picture>
                     <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                     </div>
                     <div class="work-content">
@@ -168,7 +188,12 @@
                 </li>
                 <li class="buttom-bg works-set__item">
                   <div class="overlay-wrapper">
-                    <img src="./images.img/work5.jpg" alt="Две коробки:белая и коричневая" class="work5">
+                    <picture>
+                      <source src="./images.img/work1-mobile@1x.jpg 1x, ./images.img/work1-mobile@2x.jpg 2x" media="(min-width: 320px)">
+                      <source src="./images.img/work1-tablet@1x.jpg 1x, ./images.img/work1-tablet@2x.jpg 2x" media="(min-width: 769px)">
+                      <source src="./images.img/work1-desctop@1x.jpg 1x, ./images.img/work1-desctop@2x.jpg 2x" media="(min-width: 1200px)">
+                      <img src="./images.img/work5.jpg" alt="Две коробки:белая и коричневая" class="work5">
+                    </picture>
                     <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                     </div>
                     <div class="work-content">
@@ -178,7 +203,12 @@
                 </li>
                 <li class="buttom-bg works-set__item">
                   <div class="overlay-wrapper">
-                    <img src="./images.img/work6.jpg" alt="Монитор компьютера" class="work6">
+                    <picture>
+                      <source src="./images.img/work1-mobile@1x.jpg 1x, ./images.img/work1-mobile@2x.jpg 2x" media="(min-width: 320px)">
+                      <source src="./images.img/work1-tablet@1x.jpg 1x, ./images.img/work1-tablet@2x.jpg 2x" media="(min-width: 769px)">
+                      <source src="./images.img/work1-desctop@1x.jpg 1x, ./images.img/work1-desctop@2x.jpg 2x" media="(min-width: 1200px)">
+                      <img src="./images.img/work6.jpg" alt="Монитор компьютера" class="work6">
+                    </picture>
                     <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                     </div>
                     <div class="work-content">
@@ -188,7 +218,12 @@
                 </li>
                 <li class="buttom-bg works-set__item">
                   <div class="overlay-wrapper">
-                    <img src="./images.img/work7.jpg" alt="Разворот женского журнала" class="work7">
+                    <picture>
+                      <source src="./images.img/work1-mobile@1x.jpg 1x, ./images.img/work1-mobile@2x.jpg 2x" media="(min-width: 320px)">
+                      <source src="./images.img/work1-tablet@1x.jpg 1x, ./images.img/work1-tablet@2x.jpg 2x" media="(min-width: 769px)">
+                      <source src="./images.img/work1-desctop@1x.jpg 1x, ./images.img/work1-desctop@2x.jpg 2x" media="(min-width: 1200px)">
+                      <img src="./images.img/work7.jpg" alt="Разворот женского журнала" class="work7">
+                    </picture>
                     <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                     </div>
                     <div class="work-content">
@@ -198,7 +233,12 @@
                 </li>
                 <li class="buttom-bg works-set__item">
                   <div class="overlay-wrapper">
-                    <img src="./images.img/work8.jpg" alt="Белый ярдык с черной надписью" class="work8">
+                    <picture>
+                      <source src="./images.img/work1-mobile@1x.jpg 1x, ./images.img/work1-mobile@2x.jpg 2x" media="(min-width: 320px)">
+                      <source src="./images.img/work1-tablet@1x.jpg 1x, ./images.img/work1-tablet@2x.jpg 2x" media="(min-width: 769px)">
+                      <source src="./images.img/work1-desctop@1x.jpg 1x, ./images.img/work1-desctop@2x.jpg 2x" media="(min-width: 1200px)">
+                      <img src="./images.img/work8.jpg" alt="Белый ярдык с черной надписью" class="work8">
+                    </picture>
                     <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                     </div>
                     <div class="work-content">
@@ -208,7 +248,12 @@
                 </li>
                 <li class="buttom-bg works-set__item">
                   <div class="overlay-wrapper">
-                    <img src="./images.img/work9.jpg" alt="Человек работает в приложении на ноутбуке" class="work9">
+                    <picture>
+                      <source src="./images.img/work1-mobile@1x.jpg 1x, ./images.img/work1-mobile@2x.jpg 2x" media="(min-width: 320px)">
+                      <source src="./images.img/work1-tablet@1x.jpg 1x, ./images.img/work1-tablet@2x.jpg 2x" media="(min-width: 769px)">
+                      <source src="./images.img/work1-desctop@1x.jpg 1x, ./images.img/work1-desctop@2x.jpg 2x" media="(min-width: 1200px)">
+                      <img src="./images.img/work9.jpg" alt="Человек работает в приложении на ноутбуке" class="work9">
+                    </picture>
                     <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                     </div>
                     <div class="work-content">
@@ -217,8 +262,9 @@
                 </div>
                 </li>
             </ul>
+          </div>
         </section>
-        </div>
+        
         <!--End work gallery-->
     </main>
 
