corrected positioning mistaces

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </nav>
 
   <ul class="list-all list in-touch">
-    <li class="navigation-item">
+    <li class="navigation-item navigation-item__first">
       <a class="header-link contact-link link" href="mailto:info@devstudio.com" lang="en"> 
         <svg class="icon-envelope" width="16px" height="16px">
           <use href="./images.img/sprite-copy.svg#icon-envelope-hover"> </use>
@@ -438,14 +438,14 @@
     <div class="invitation-footer">
       <p class="invitation">ПРИСОЕДИНЯЙТЕСЬ</p>
       <ul class="list-all list footer-set">
-        <li class="footer-icons-list">
+        <li class="footer-set__footer-icons-list">
           <a href="" class="footer-set__footer-icons-color footer-set__footer-icons-link">
               <svg class="footer-set__footer-icons" width="20px" height="20px">
                 <use href="./images.img/sprite-copy.svg#icon-instagram"></use>
               </svg>
           </a>
         </li>
-        <li class="footer-list__footer-icons-list">
+        <li class="footer-set__footer-icons-list">
           <a href="" class="footer-set__footer-icons-color footer-set__footer-icons-link">
               <svg class="footer-set__footer-icons" width="20px" height="20px">
                 <use href="./images.img/sprite-copy.svg#icon-twitter"></use>
