--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
     </nav>
   
     <ul class="list-all list in-touch">
-      <li class="navigation-item">
+      <li class="navigation-item navigation-item__first">
         <a class="header-link contact-link link" href="mailto:info@devstudio.com" lang="en"> 
           <svg class="icon-envelope" width="16px" height="16px">
             <use href="./images.img/sprite-copy.svg#icon-envelope-hover"> </use>
