--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
             </li>
             <li class="clients-box clients-main-link">
               <a href="" class="clients-link">
-                  <svg class="clients-logo" width="44.27px" height="49.23px">
+                  <svg class="clients-logo" width="84.44px" height="40.62px">
                     <use href="./images.img/sprite-copy.svg#icon-logo-3"></use>
                   </svg>
               </a>
@@ -388,9 +388,10 @@
                   </svg>
               </a>
             </li>
+          
             <li class="clients-box clients-main-link">
               <a href="" class="clients-link clients-link">
-                <svg class="clients-logo" width="44.27px" height="49.23px">
+                <svg class="clients-logo clients-logo__other" width="84.44px" height="40.62px">
                   <use href="./images.img/sprite-copy.svg#icon-logo-5"></use>
                 </svg>
               </a>
