--- a/portfolio.html
+++ b/portfolio.html
@@ -144,9 +144,9 @@
                 <li class="buttom-bg works-set__item">
                   <div class="overlay-wrapper">
                     <picture>
-                      <source src="./images.img/work1-mobile@1x.jpg 1x, ./images.img/work1-mobile@2x.jpg 2x" media="(min-width: 320px)">
-                      <source src="./images.img/work1-tablet@1x.jpg 1x, ./images.img/work1-tablet@2x.jpg 2x" media="(min-width: 769px)">
-                      <source src="./images.img/work1-desctop@1x.jpg 1x, ./images.img/work1-desctop@2x.jpg 2x" media="(min-width: 1200px)">
+                      <source src="./images.img/work2-mobile@1x.jpg 1x, ./images.img/work2-mobile@2x.jpg 2x" media="(min-width: 320px)">
+                      <source src="./images.img/work2-tablet@1x.jpg1x, ./images.img/work2-tablet@2x.jpg 2x" media="(min-width: 769px)">
+                      <source src="./images.img/work2-desctop@1x.jpg 1x, ./images.img/work2-desctop@2x.jpg 2x" media="(min-width: 1200px)">
                       <img src="./images.img/work2.jpg" alt="Баскетболисты борятся за мяч" width="370" height="294" class="work2">
                     </picture>
                     <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -237,7 +237,7 @@
                       <source src="./images.img/work1-mobile@1x.jpg 1x, ./images.img/work1-mobile@2x.jpg 2x" media="(min-width: 320px)">
                       <source src="./images.img/work1-tablet@1x.jpg 1x, ./images.img/work1-tablet@2x.jpg 2x" media="(min-width: 769px)">
                       <source src="./images.img/work1-desctop@1x.jpg 1x, ./images.img/work1-desctop@2x.jpg 2x" media="(min-width: 1200px)">
-                      <img src="./images.img/work8.jpg" alt="Белый ярдык с черной надписью" class="work8">
+                      <img src="./images.img/work8.jpg" alt="Белый ярлык с черной надписью" class="work8">
                     </picture>
                     <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                     </div>
