--- a/portfolio.html
+++ b/portfolio.html
@@ -24,10 +24,10 @@
     <nav class="navigation">
       <ul class="list-all list navigation-list">
         <li class="navigation-item">
-          <a href="./index.html" class="current header-link link im-here" >Студия</a>
+          <a href="./index.html" class="header-link link im-here" >Студия</a>
         </li>
         <li class="navigation-item">
-          <a href="./portfolio.html" class="header-link link im-here" >Портфолио</a>
+          <a href="./portfolio.html" class="current header-link link im-here" >Портфолио</a>
         </li>
         <li class="navigation-item">
           <a href="" class="header-link link im-here" >Контакты</a>
