--- a/portfolio.html
+++ b/portfolio.html
@@ -128,12 +128,12 @@
             <ul class="list-all list works-set">
                 <li class="buttom-bg works-set__item">
                   <div class="overlay-wrapper">
-                    <pictuture>
+                    <picture>
                       <source src="./images.img/work1-mobile@1x.jpg 1x, ./images.img/work1-mobile@2x.jpg 2x" media="(min-width: 320px)">
                       <source src="./images.img/work1-tablet@1x.jpg 1x, ./images.img/work1-tablet@2x.jpg 2x" media="(min-width: 769px)">
                       <source src="./images.img/work1-desctop@1x.jpg 1x, ./images.img/work1-desctop@2x.jpg 2x" media="(min-width: 1200px)">
                       <img src="./images.img/work1.jpg" alt="Ноутбук с изображением сайта на екране" width="370" height="294" class="work1">
-                    </pictuture>
+                    </picture>
                     <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                     </div>
                   <div class="work-content">
@@ -145,14 +145,14 @@
                   <div class="overlay-wrapper">
                     <picture>
                       <source src="./images.img/work2-mobile@1x.jpg 1x, ./images.img/work2-mobile@2x.jpg 2x" media="(min-width: 320px)">
-                      <source src="./images.img/work2-tablet@1x.jpg1x, ./images.img/work2-tablet@2x.jpg 2x" media="(min-width: 769px)">
+                      <source src="./images.img/work2-tablet@1x.jpg 1x, ./images.img/work2-tablet@2x.jpg 2x" media="(min-width: 769px)">
                       <source src="./images.img/work2-desctop@1x.jpg 1x, ./images.img/work2-desctop@2x.jpg 2x" media="(min-width: 1200px)">
-                      <img src="./images.img/work2.jpg" alt="Баскетболисты борятся за мяч" width="370" height="294" class="work2">
+                      <img src="./images.img/work2.jpg" alt="Баскетболисты борятся за мяч" width="370" height="294" class="work1">
                     </picture>
                     <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                     </div>
-                    <div class="work-content">
-                    <h2 class="work-content__name"> Постер New Orlean vs Golden Star</h2>
+                  <div class="work-content">
+                    <h2 class="work-content__name">Постер New Orlean vs Golden Star</h2>
                     <p class="work-content__explanation">Дизайн</p>
                     </div>
                 </li>
