--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
    
    <div class="mobile-menu is-hidden" data-menu>
      <button type="button" class="mobile-menu__close-btn" data-menu-close>
-       <svg class="mobile-menu__close-icon" width="40px" height="40px">
+       <svg class="mobile-menu__close-icon" width="18.67px" height="18.67px">
          <use href="./images.img/sprite-copy.svg#icon-close"></use>
        </svg>
      </button>
@@ -376,14 +376,14 @@
             </li>
             <li class="clients-box clients-main-link">
               <a href="" class="clients-link">
-                  <svg class="clients-logo" width="84.44px" height="40.62px">
+                  <svg class="clients-logo" width="44.27px" height="49.23px">
                     <use href="./images.img/sprite-copy.svg#icon-logo-3"></use>
                   </svg>
               </a>
             </li>
             <li class="clients-box clients-main-link">
-              <a href="" class="clients-link">
-                  <svg class="clients-logo" width="44.27px" height="49.23px">
+              <a href="" class="clients-link clients-link">
+                  <svg class="clients-logo" width="84.44px" height="40.62px">
                     <use href="./images.img/sprite-copy.svg#icon-logo-4"></use>
                   </svg>
               </a>
@@ -391,14 +391,14 @@
           
             <li class="clients-box clients-main-link">
               <a href="" class="clients-link clients-link">
-                <svg class="clients-logo clients-logo__other" width="84.44px" height="40.62px">
+                <svg class="clients-logo" width="44.27px" height="49.23px">
                   <use href="./images.img/sprite-copy.svg#icon-logo-5"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-box clients-main-link">
               <a href="" class="clients-link">
-                <svg class="clients-logo" width="44.27px" height="49.23px">
+                <svg class="clients-logo" width="84.44px" height="40.62px">
                   <use href="./images.img/sprite-copy.svg#icon-logo-6"></use>
                 </svg>
               </a>
